src/third_party/assimp/external/cimport.h


 void aiMatrix3FromTo(
         aiMatrix3x3 *mat,
        const  aiVector3D *from,
        const  aiVector3D *to);
 void aiMatrix4FromMatrix3(
         aiMatrix4x4 *dst,
        const  aiMatrix3x3 *mat);
 void aiMatrix4FromScalingQuaternionPosition(
         aiMatrix4x4 *mat,
        const  aiVector3D *scaling,
        const  aiQuaternion *rotation,
        const  aiVector3D *position);
 void aiMatrix4Add(
         aiMatrix4x4 *dst,
        const  aiMatrix4x4 *src);
 int aiMatrix4AreEqual(
        const  aiMatrix4x4 *a,
        const  aiMatrix4x4 *b);
 int aiMatrix4AreEqualEpsilon(
        const  aiMatrix4x4 *a,
        const  aiMatrix4x4 *b,
        const float epsilon);
 void aiMatrix4Inverse(
         aiMatrix4x4 *mat);
 float aiMatrix4Determinant(
        const  aiMatrix4x4 *mat);
 int aiMatrix4IsIdentity(
        const  aiMatrix4x4 *mat);
 void aiMatrix4DecomposeIntoScalingEulerAnglesPosition(
        const  aiMatrix4x4 *mat,
         aiVector3D *scaling,
         aiVector3D *rotation,
         aiVector3D *position);
 void aiMatrix4DecomposeIntoScalingAxisAnglePosition(
        const  aiMatrix4x4 *mat,
         aiVector3D *scaling,
         aiVector3D *axis,
        float *angle,
         aiVector3D *position);
 void aiMatrix4DecomposeNoScaling(
        const  aiMatrix4x4 *mat,
         aiQuaternion *rotation,
         aiVector3D *position);
 void aiMatrix4FromEulerAngles(
         aiMatrix4x4 *mat,
        float x, float y, float z);
 void aiMatrix4RotationX(
         aiMatrix4x4 *mat,
        const float angle);
 void aiMatrix4RotationY(
         aiMatrix4x4 *mat,
        const float angle);
 void aiMatrix4RotationZ(
         aiMatrix4x4 *mat,
        const float angle);
 void aiMatrix4FromRotationAroundAxis(
         aiMatrix4x4 *mat,
        const  aiVector3D *axis,
        const float angle);
 void aiMatrix4Translation(
         aiMatrix4x4 *mat,
        const  aiVector3D *translation);
 void aiMatrix4Scaling(
         aiMatrix4x4 *mat,
        const  aiVector3D *scaling);
 void aiMatrix4FromTo(
         aiMatrix4x4 *mat,
        const  aiVector3D *from,
        const  aiVector3D *to);
 void aiQuaternionFromEulerAngles(
         aiQuaternion *q,
        float x, float y, float z);
 void aiQuaternionFromAxisAngle(
         aiQuaternion *q,
        const  aiVector3D *axis,
        const float angle);
 void aiQuaternionFromNormalizedQuaternion(
         aiQuaternion *q,
        const  aiVector3D *normalized);
 int aiQuaternionAreEqual(
        const  aiQuaternion *a,
        const  aiQuaternion *b);
 int aiQuaternionAreEqualEpsilon(
        const  aiQuaternion *a,
        const  aiQuaternion *b,
        const float epsilon);
 void aiQuaternionNormalize(
         aiQuaternion *q);
 void aiQuaternionConjugate(
         aiQuaternion *q);
 void aiQuaternionMultiply(
         aiQuaternion *dst,
        const  aiQuaternion *q);
 void aiQuaternionInterpolate(
         aiQuaternion *dst,
        const  aiQuaternion *start,
        const  aiQuaternion *end,
        const float factor);