src/third_party/assimp/external/material.h


enum aiTextureOp {
    aiTextureOp_Multiply = 0x0,
    aiTextureOp_Add = 0x1,
    aiTextureOp_Subtract = 0x2,
    aiTextureOp_Divide = 0x3,
    aiTextureOp_SmoothAdd = 0x4,
    aiTextureOp_SignedAdd = 0x5,
};
enum aiTextureMapMode {
    aiTextureMapMode_Wrap = 0x0,
    aiTextureMapMode_Clamp = 0x1,
    aiTextureMapMode_Decal = 0x3,
    aiTextureMapMode_Mirror = 0x2,
};
enum aiTextureMapping {
    aiTextureMapping_UV = 0x0,
    aiTextureMapping_SPHERE = 0x1,
    aiTextureMapping_CYLINDER = 0x2,
    aiTextureMapping_BOX = 0x3,
    aiTextureMapping_PLANE = 0x4,
    aiTextureMapping_OTHER = 0x5,
};
enum aiTextureType {
    aiTextureType_NONE = 0,
    aiTextureType_DIFFUSE = 1,
    aiTextureType_SPECULAR = 2,
    aiTextureType_AMBIENT = 3,
    aiTextureType_EMISSIVE = 4,
    aiTextureType_HEIGHT = 5,
    aiTextureType_NORMALS = 6,
    aiTextureType_SHININESS = 7,
    aiTextureType_OPACITY = 8,
    aiTextureType_DISPLACEMENT = 9,
    aiTextureType_LIGHTMAP = 10,
    aiTextureType_REFLECTION = 11,
    aiTextureType_BASE_COLOR = 12,
    aiTextureType_NORMAL_CAMERA = 13,
    aiTextureType_EMISSION_COLOR = 14,
    aiTextureType_METALNESS = 15,
    aiTextureType_DIFFUSE_ROUGHNESS = 16,
    aiTextureType_AMBIENT_OCCLUSION = 17,
    aiTextureType_SHEEN = 19,
    aiTextureType_CLEARCOAT = 20,
    aiTextureType_TRANSMISSION = 21,
    aiTextureType_UNKNOWN = 18,
};
 const char *aiTextureTypeToString(enum aiTextureType in);
struct aiUVTransform {
     aiVector2D mTranslation;
     aiVector2D mScaling;
    float mRotation;
};
struct aiMaterialProperty {
     aiString mKey;
    unsigned int mSemantic;
    unsigned int mIndex;
    unsigned int mDataLength;
     aiPropertyTypeInfo mType;
    char *mData;
};
struct aiMaterial
{
     aiMaterialProperty **mProperties;
    unsigned int mNumProperties;
    unsigned int mNumAllocated;
};
  aiReturn aiGetMaterialProperty(
        const  aiMaterial *pMat,
        const char *pKey,
        unsigned int type,
        unsigned int index,
        const  aiMaterialProperty **pPropOut);
  aiReturn aiGetMaterialFloatArray(
        const  aiMaterial *pMat,
        const char *pKey,
        unsigned int type,
        unsigned int index,
        float *pOut,
        unsigned int *pMax);
inline aiReturn aiGetMaterialFloat(const  aiMaterial *pMat,
        const char *pKey,
        unsigned int type,
        unsigned int index,
        float *pOut) {
    return aiGetMaterialFloatArray(pMat, pKey, type, index, pOut, (unsigned int *)0x0);
}
  aiReturn aiGetMaterialIntegerArray(const  aiMaterial *pMat,
        const char *pKey,
        unsigned int type,
        unsigned int index,
        int *pOut,
        unsigned int *pMax);
inline aiReturn aiGetMaterialInteger(const  aiMaterial *pMat,
        const char *pKey,
        unsigned int type,
        unsigned int index,
        int *pOut) {
    return aiGetMaterialIntegerArray(pMat, pKey, type, index, pOut, (unsigned int *)0x0);
}
  aiReturn aiGetMaterialColor(const  aiMaterial *pMat,
        const char *pKey,
        unsigned int type,
        unsigned int index,
         aiColor4D *pOut);
  aiReturn aiGetMaterialUVTransform(const  aiMaterial *pMat,
        const char *pKey,
        unsigned int type,
        unsigned int index,
         aiUVTransform *pOut);
  aiReturn aiGetMaterialString(const  aiMaterial *pMat,
        const char *pKey,
        unsigned int type,
        unsigned int index,
         aiString *pOut);
 unsigned int aiGetMaterialTextureCount(const  aiMaterial *pMat,
         aiTextureType type);
 aiReturn aiGetMaterialTexture(const  aiMaterial *mat,
         aiTextureType type,
        unsigned int index,
         aiString *path,
         aiTextureMapping *mapping ,
        unsigned int *uvindex ,
        float *blend ,
         aiTextureOp *op ,
         aiTextureMapMode *mapmode ,
        unsigned int *flags );