src/third_party/assimp/external/version.h


 const char*  aiGetLegalString  (void);
 unsigned int aiGetVersionPatch(void);
 unsigned int aiGetVersionMinor (void);
 unsigned int aiGetVersionMajor (void);
 unsigned int aiGetVersionRevision (void);
 const char *aiGetBranchName();
 unsigned int aiGetCompileFlags(void);