src/third_party/assimp/assimp.odin


    @(link_name="aiMatrix3FromTo")
    matrix3_from_to :: proc(mat : ^Matrix3x3, from : ^Vector3D, to : ^Vector3D) ---;

    @(link_name="aiMatrix4FromMatrix3")
    matrix4_from_matrix3 :: proc(dst : ^Matrix4x4, mat : ^Matrix3x3) ---;

    @(link_name="aiMatrix4FromScalingQuaternionPosition")
    matrix4_from_scaling_quaternion_position :: proc(mat : ^Matrix4x4, scaling : ^Vector3D, rotation : ^Quaternion, position : ^Vector3D) ---;

    @(link_name="aiMatrix4Add")
    matrix4_add :: proc(dst : ^Matrix4x4, src : ^Matrix4x4) ---;

    @(link_name="aiMatrix4AreEqual")
    matrix4_are_equal :: proc(a : ^Matrix4x4, b : ^Matrix4x4) -> _c.int ---;

    @(link_name="aiMatrix4AreEqualEpsilon")
    matrix4_are_equal_epsilon :: proc(a : ^Matrix4x4, b : ^Matrix4x4, epsilon : _c.float) -> _c.int ---;

    @(link_name="aiMatrix4Inverse")
    matrix4_inverse :: proc(mat : ^Matrix4x4) ---;

    @(link_name="aiMatrix4Determinant")
    matrix4_determinant :: proc(mat : ^Matrix4x4) -> _c.float ---;

    @(link_name="aiMatrix4IsIdentity")
    matrix4_is_identity :: proc(mat : ^Matrix4x4) -> _c.int ---;

    @(link_name="aiMatrix4DecomposeIntoScalingEulerAnglesPosition")
    matrix4_decompose_into_scaling_euler_angles_position :: proc(mat : ^Matrix4x4, scaling : ^Vector3D, rotation : ^Vector3D, position : ^Vector3D) ---;

    @(link_name="aiMatrix4DecomposeIntoScalingAxisAnglePosition")
    matrix4_decompose_into_scaling_axis_angle_position :: proc(mat : ^Matrix4x4, scaling : ^Vector3D, axis : ^Vector3D, angle : ^_c.float, position : ^Vector3D) ---;

    @(link_name="aiMatrix4DecomposeNoScaling")
    matrix4_decompose_no_scaling :: proc(mat : ^Matrix4x4, rotation : ^Quaternion, position : ^Vector3D) ---;

    @(link_name="aiMatrix4FromEulerAngles")
    matrix4_from_euler_angles :: proc(mat : ^Matrix4x4, x : _c.float, y : _c.float, z : _c.float) ---;

    @(link_name="aiMatrix4RotationX")
    matrix4_rotation_x :: proc(mat : ^Matrix4x4, angle : _c.float) ---;

    @(link_name="aiMatrix4RotationY")
    matrix4_rotation_y :: proc(mat : ^Matrix4x4, angle : _c.float) ---;

    @(link_name="aiMatrix4RotationZ")
    matrix4_rotation_z :: proc(mat : ^Matrix4x4, angle : _c.float) ---;

    @(link_name="aiMatrix4FromRotationAroundAxis")
    matrix4_from_rotation_around_axis :: proc(mat : ^Matrix4x4, axis : ^Vector3D, angle : _c.float) ---;

    @(link_name="aiMatrix4Translation")
    matrix4_translation :: proc(mat : ^Matrix4x4, translation : ^Vector3D) ---;

    @(link_name="aiMatrix4Scaling")
    matrix4_scaling :: proc(mat : ^Matrix4x4, scaling : ^Vector3D) ---;

    @(link_name="aiMatrix4FromTo")
    matrix4_from_to :: proc(mat : ^Matrix4x4, from : ^Vector3D, to : ^Vector3D) ---;

    @(link_name="aiQuaternionFromEulerAngles")
    quaternion_from_euler_angles :: proc(q : ^Quaternion, x : _c.float, y : _c.float, z : _c.float) ---;

    @(link_name="aiQuaternionFromAxisAngle")
    quaternion_from_axis_angle :: proc(q : ^Quaternion, axis : ^Vector3D, angle : _c.float) ---;

    @(link_name="aiQuaternionFromNormalizedQuaternion")
    quaternion_from_normalized_quaternion :: proc(q : ^Quaternion, normalized : ^Vector3D) ---;

    @(link_name="aiQuaternionAreEqual")
    quaternion_are_equal :: proc(a : ^Quaternion, b : ^Quaternion) -> _c.int ---;

    @(link_name="aiQuaternionAreEqualEpsilon")
    quaternion_are_equal_epsilon :: proc(a : ^Quaternion, b : ^Quaternion, epsilon : _c.float) -> _c.int ---;

    @(link_name="aiQuaternionNormalize")
    quaternion_normalize :: proc(q : ^Quaternion) ---;

    @(link_name="aiQuaternionConjugate")
    quaternion_conjugate :: proc(q : ^Quaternion) ---;

    @(link_name="aiQuaternionMultiply")
    quaternion_multiply :: proc(dst : ^Quaternion, q : ^Quaternion) ---;

    @(link_name="aiQuaternionInterpolate")
    quaternion_interpolate :: proc(dst : ^Quaternion, start : ^Quaternion, end : ^Quaternion, factor : _c.float) ---;

    @(link_name="aiGetImporterDesc")
    get_importer_desc :: proc(extension : cstring) -> ^ImporterDesc ---;

    @(link_name="aiTextureTypeToString")
    texture_type_to_string :: proc(_in : TextureType) -> cstring ---;

    @(link_name="aiGetMaterialProperty")
    get_material_property :: proc(pMat : ^Material, pKey : cstring, type : _c.uint, index : _c.uint, pPropOut : [^]^MaterialProperty) -> Return ---;

    @(link_name="aiGetMaterialFloatArray")
    get_material_float_array :: proc(pMat : ^Material, pKey : cstring, type : _c.uint, index : _c.uint, pOut : ^_c.float, pMax : ^_c.uint) -> Return ---;

    @(link_name="aiGetMaterialFloat")
    get_material_float :: proc(pMat : ^Material, pKey : cstring, type : _c.uint, index : _c.uint, pOut : ^_c.float) -> Return ---;

    @(link_name="aiGetMaterialIntegerArray")
    get_material_integer_array :: proc(pMat : ^Material, pKey : cstring, type : _c.uint, index : _c.uint, pOut : ^_c.int, pMax : ^_c.uint) -> Return ---;

    @(link_name="aiGetMaterialInteger")
    get_material_integer :: proc(pMat : ^Material, pKey : cstring, type : _c.uint, index : _c.uint, pOut : ^_c.int) -> Return ---;

    @(link_name="aiGetMaterialColor")
    get_material_color :: proc(pMat : ^Material, pKey : cstring, type : _c.uint, index : _c.uint, pOut : ^Color4D) -> Return ---;

    @(link_name="aiGetMaterialUVTransform")
    get_material_uv_transform :: proc(pMat : ^Material, pKey : cstring, type : _c.uint, index : _c.uint, pOut : ^UVTransform) -> Return ---;

    @(link_name="aiGetMaterialString")
    get_material_string :: proc(pMat : ^Material, pKey : cstring, type : _c.uint, index : _c.uint, pOut : ^String) -> Return ---;

    @(link_name="aiGetMaterialTextureCount")
    get_material_texture_count :: proc(pMat : ^Material, type : TextureType) -> _c.uint ---;

    @(link_name="aiGetMaterialTexture")
    get_material_texture :: proc(mat : ^Material, type : TextureType, index : _c.uint, path : ^String, mapping : ^TextureMapping, uvindex : ^_c.uint, blend : ^_c.float, op : ^TextureOp, mapmode : ^TextureMapMode, flags : ^_c.uint) -> Return ---;

    @(link_name="aiGetLegalString")
    get_legal_string :: proc() -> cstring ---;

    @(link_name="aiGetVersionPatch")
    get_version_patch :: proc() -> _c.uint ---;

    @(link_name="aiGetVersionMinor")
    get_version_minor :: proc() -> _c.uint ---;

    @(link_name="aiGetVersionMajor")
    get_version_major :: proc() -> _c.uint ---;

    @(link_name="aiGetVersionRevision")
    get_version_revision :: proc() -> _c.uint ---;

    @(link_name="aiGetBranchName")
    get_branch_name :: proc() -> cstring ---;

    @(link_name="aiGetCompileFlags")
    get_compile_flags :: proc() -> _c.uint ---;

}
